[gd_scene load_steps=4 format=3 uid="uid://bdewg4bkmfh30"]

[ext_resource type="Script" uid="uid://c14bu60o6vqhq" path="res://scenes/GAMEPLAY/gameplay.gd" id="1_foqpg"]
[ext_resource type="PackedScene" uid="uid://bx0rdys8yglae" path="res://scenes/STAR_BACKGROUND/star_background.tscn" id="2_6lutf"]
[ext_resource type="PackedScene" uid="uid://bsefrg2i5emfs" path="res://scenes/coin/COIN.tscn" id="3_61s8v"]

[node name="GAMEPLAY" type="Node2D"]
script = ExtResource("1_foqpg")

[node name="STAR_BACKGROUND" parent="." instance=ExtResource("2_6lutf")]

[node name="COIN" parent="." instance=ExtResource("3_61s8v")]

[node name="LBL_score" type="Label" parent="."]
offset_left = 32.0
offset_top = 32.0
offset_right = 124.0
offset_bottom = 55.0
theme_override_colors/font_color = Color(0.333333, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 1
text = "Coins gotten:"

[node name="LBL_time" type="Label" parent="."]
offset_left = 32.0
offset_top = 64.0
offset_right = 124.0
offset_bottom = 87.0
theme_override_colors/font_color = Color(0, 0.633333, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 1
text = "Time left: "
